--- a/day13-automation-and-preprocessors/example-02/_base.scss
+++ b/day13-automation-and-preprocessors/example-02/_base.scss
@@ -1,5 +1,6 @@
 html {
-    font-size: 20px;
+    $basic-font-size: 20px;
+    font-size: $basic-font-size;
     font-family: monospace;
     background-color: skyblue;
 }
